# parlai-poetry-config

./: README.md  pyproject.toml  requirements.txt
